--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "argon2": "^0.30.2",
+    "cookie": "^0.5.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "jsonwebtoken": "^8.5.1",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^8.5.9",
     "prettier": "^2.7.1"
   }
 }
