--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
-    "jsonwebtoken": "^8.5.1",
+    "jose": "^4.11.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^8.5.9",
     "prettier": "^2.7.1"
   }
 }
