--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "eslint-config-next": "13.0.3",
     "jose": "^4.11.0",
     "next": "13.0.3",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/randomstring": "^1.1.8",
     "prettier": "^2.7.1"
   }
 }
